# UICompiler

./: .gitignore  .~lock.output.csv#  AUTHENTICATION_API.md  README.md  custom_decorators.py  db.sqlite3  lfm2_output.txt  main.py  output.csv  pyproject.toml  requirements.txt
authentication/: models.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_alter_customuser_username.py  0003_emailotp.py  0004_customuser_backcover_img_customuser_profile_img.py
core/: settings.py  urls.py
docs/: api-reference.md  architecture.md  backend.md  design-system.md  environment.md  erModels.md  frontend.md  integration.md  setup.md
frontend/: cleanup_dark_theme.cjs  cleanup_input_shadows.cjs  cleanup_shadows_dark.cjs  index.html  modernize_dark.cjs  package-lock.json  package.json  reduce_contrast.cjs  reduce_contrast_more.cjs  refine_dark_theme.cjs  replace_buttons.cjs  replace_buttons2.cjs  replace_sidebar_buttons.cjs  replace_text_buttons.cjs  update_dark_theme.cjs  vite.config.ts
frontend/components/ui/: sonner.tsx
frontend/docs/: backend-integration.md  color-scheme.md  design-guidelines.md  environment.md
frontend/src/: App.tsx  index.css
frontend/src/components/: Hero.tsx  Profile.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/config/: env.ts
frontend/src/features/sketch-workspace/components/: CanvasArea.tsx  ResultPanel.tsx
frontend/src/features/sketch-workspace/hooks/: useCanvas.ts  (+1 more)
frontend/src/pages/: Auth.tsx  Home.tsx  Profile.tsx  SketchToUI.tsx
frontend/src/services/: api.ts
